own-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: own-app
  labels:
    app: own-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: own-app
  namespace: own-app
  labels:
    app: own-app
spec:
  selector:
    matchLabels:
      app: own-app
  template:
    metadata:
      labels:
        app: own-app
    spec:
      containers:
        - name: own-app
          image: ghcr.io/dotkuro/helloserver:latest
          ports:
            - name: http
              containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: docker-container-registry
      automountServiceAccountToken: false
---
apiVersion: v1
kind: Service
metadata:
  name: own-app
  namespace: own-app
  labels:
    app: own-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: own-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: own-app
  namespace: own-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - own.ws.akampf.dev
      secretName: own-app-secret
  rules:
    - host: own.ws.akampf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: own-app
                port:
                  name: http
